# app-cocos

./: README.md  import-map.json  package.json  tsconfig.json
assets/app/: App.ts
assets/app/components/: NetImageEx.ts  SlideBack.ts
assets/app/config/: keys.ts
assets/app/utils/: Utils.ts
assets/bos/: README.md  exports.ts  p_extra.d.ts  p_sensitive.d.ts  p_sqlite.d.ts
assets/bos/engine/: engine.ts
assets/bos/utils/: BrowserUtil.ts  BufferUtil.ts  ClassUtils.ts  ImageUtil.ts  MathUtil.ts  Merge.ts  NodeUtil.ts  ObjectUtil.ts  RandomUtil.ts  SpriteFrameUtils.ts  StorageUtil.ts  StringUtil.ts  TimeUtil.ts  TouchUtil.ts  exports.ts
assets/game/dummy/: Scene.scene
assets/game/kaeng/: README.md  Room.ts  Scene.scene
assets/launch/: Launch.scene
assets/platform/: Camera.ts  Contacts.ts  DeviceInfo.ts  Gallery.ts  GalleryX.ts  Location.ts  NativeDevice.ts  NativeUI.ts  NetworkInfo.ts  Permission.ts  PowerInfo.ts  QRcode.ts  Sensor.ts  exports.ts
assets/qsdk/: README.md  exports.ts
assets/quickupdate/: HotUpdate.ts
assets/resources/: readme.md
doc/: readme.md
extensions/byext/: builder.js  hooks.js  main.js  package.json  readme.zh.md
extensions/xgui/: README.md  README.zh-CN.md  package-lock.json  package.json
native/engine/ios/: AppDelegate.mm  CMakeLists.txt  GameIOSPlatform.h  GameIOSPlatform.mm  Info.plist  JsbBridgeGame.h  JsbBridgeGame.mm  NativeOcClass.h  NativeOcClass.m  Podfile  Pre-AutoLoadPlulgins.cmake  README.md  main.mm
native/engine/ios/266.xcodeproj/: project.pbxproj
native/engine/ios/266.xcodeproj/project.xcworkspace/xcuserdata/boyaa.xcuserdatad/: UserInterfaceState.xcuserstate
native/engine/ios/266.xcodeproj/xcshareddata/xcschemes/: boost_container.xcscheme  builtin-res.xcscheme  cocos_engine.xcscheme
native/engine/ios/266.xcodeproj/xcuserdata/boyaa.xcuserdatad/xcschemes/: xcschememanagement.plist
native/engine/ios/Base.lproj/: LaunchScreen.storyboard
native/engine/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
native/plugins/plugin_label/src/: BYLabelExport.cpp  ByEditBox.cpp  ByEditBox.h  CMakeLists.txt  Keyboard.h  NativeTekstoLabel.cpp  NativeTekstoLabel.h  NativeTekstoLabelRegister.cpp  NativeTekstoLabelRegister.h
raw-assets/: readme.txt
tools/: README.md
tools/idl/: idl.yaml
types/: cos.d.ts  global.d.ts
(+1329 files in other folders)
